apps/subsystems/media/agregarr/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: agregarr
  namespace: media
  labels:
    app.kubernetes.io/name: agregarr
spec:
  selector:
    app.kubernetes.io/name: agregarr
  ports:
  - name: agregarr
    port: 7171
    targetPort: agregarr
    protocol: TCP
  type: ClusterIP
